<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TODO Get rid of duplicate strings -->


    <!-- Description here -->
    <string name="ow_empty_string"></string>
    <!-- Description here -->
    <string name="ow_app_name">ziftrWALLET</string>
    <!-- Description here -->
    <string name="ow_hello_world">Hello world!</string>
    <!-- Description here -->
    <string name="ow_action_settings">Settings</string>
    <!-- Description here -->
    <string name="ow_passphrase_hint">Enter your passphrase</string>
    <!-- Description here -->
    <string name="ow_old_passphrase_hint">Enter your old passphrase</string>
    <!-- Description here -->
    <string name="ow_new_passphrase_hint">Enter your new passphrase</string>
    <!-- Description here -->
    <string name="ow_confirm_passphrase_hint">Re-enter your passphrase</string>
    <!-- Description here -->
    <string name="ow_menu_text_accounts">ACCOUNTS</string>
    <!-- Description here -->
    <string name="ow_menu_text_terms">TERMS</string>
    <!-- Description here -->
    <string name="ow_menu_text_settings">SETTINGS</string>
    <!-- Description here -->
    <string name="ow_menu_text_about">ABOUT</string>
    <!-- Description here -->
    <string name="ow_menu_text_security">SECURITY</string>
    <!-- Description here -->
    <string name="ow_cancel_button_text">CANCEL</string>
    <!-- Description here -->
    <string name="ow_send_button_text">SEND</string>
    <!-- Description here -->
    <string name="ow_send_to_address">SEND TO: </string>
    <!-- Description here -->
    <string name="ow_send_to_address_name">NAME: </string>
    <!-- Description here -->
    <string name="ow_receive_message_title">MESSAGE: </string>
    <!-- Description here -->
    <string name="ow_send_amount">AMOUNT: </string>
    <!-- Description here -->
    <string name="ow_send_amount_equivalent">USD</string>
    <!-- Description here -->
    <string name="ow_send_transaction_fee">FEE/KB: </string>
    <!-- Description here -->
    <string name="ow_send_total">TOTAL: </string>
    <!-- Description here -->
    <string name="ow_send_default_total">0.00</string>
    <!-- Description here -->
    <string name="ow_send_default_total_fiat_equiv">($0.00)</string>
    <!-- Description here -->
    <string name="ow_splash_screen_description">Splash Screen</string>
    <!-- Description here -->
    <string name="ow_splash_screen_activity_title">Splash</string>
    <!-- Description here -->
    <string name="ow_add_new_wallet_content_description">Add New Wallet</string>
    <!-- Description here -->
    <string name="ow_add_currency">ADD CURRENCY</string>
    <!-- Description here -->
    <string name="ow_bitcoin">Bitcoin</string>
    <!-- Description here -->
    <string name="ow_bitcoin_caps">BITCOIN</string>
    <!-- Description here -->
    <string name="ow_right_caret_content_description"></string>
    <!-- Description here -->
    <string name="ow_tx_list_divider_default">PENDING</string>
    <!-- Description here -->
    <string name="ow_tx_list_title_default">REI</string>
    <!-- Description here -->
    <string name="ow_tx_list_time_default">June 30, 2014  5:03 pm</string>
    <!-- Description here -->
    <string name="ow_receive_coins_address_label_box_title">ADDRESS LABEL</string>
    <!-- Description here -->
    <string name="ow_receive_coins_address_value_box_title">ADDRESS</string>
    <!-- Description here -->
    <string name="ow_receive_coins_address_value_default">1morseGzJtU3XUDQFpZqKCx7GLnhvYqbU1morseGzJtU3XUDQFpZqKCx7GLnhvYqbU</string>
    <!-- Description here -->
    <string name="ow_tx_details_pending_label">(Pending)</string>
    <!-- Description here -->
    <string name="ow_tx_details_amount_sent_label">Amount Sent</string>
    <!-- Description here -->
    <string name="Placeholder">Placeholder</string>
    <!-- Description here -->
    <string name="ow_tx_details_confirmation_fee_label">Confirmation Fee</string>
    <!-- Description here -->
    <string name="ow_tx_label">Transaction Note</string>
    <!-- Description here -->
    <string name="ow_tx_details_sent">Sent</string>
    <!-- welcome label -->
    <string name="ow_tx_routing_address">Routing Address</string>
    <!-- Description here -->
    <string name="ow_ok">OK</string>
    <!-- Description here -->
    <string name="ow_dialog_cancel">Cancel</string>
    <!-- Description here -->
    <string name="ow_dialog_select">Select</string>
    <!-- Description here -->
    <string name="ow_dialog_continue">Continue</string>
    <!-- Description here -->
    <string name="ow_ab_menu_description">Menu</string>
    <!-- Description here -->
    <string name="ow_ab_home_description">Home</string>
    <!-- Description here -->
    <string name="ow_ab_back_description">Back</string>
    <!-- Description here -->
    <string name="ow_ab_search_description">Search</string>
    <!-- Description here -->
    <string name="ow_add_a_currency">Add a Currency</string>
    <!-- string with link for website -->
    <string name="ow_ziftr_site_link"><a href="http://www.ziftrcoin.com">Website</a></string>
    <!-- label for reset password -->
    <string name="ow_reset_password">Reset Password</string>
    <!-- Description here -->
    <string name="ow_about">About</string>
    <!-- Description here -->
    <string name="ow_disable_passphrase">Disable Passphrase</string>
    <!-- Description here -->
    <string name="ow_fiat_currency">Fiat Currency</string>
    <!-- Description here -->
    <string name="ow_editable_confirmation_fees">Editable Confirmation Fees</string>
    <!-- Description here -->
    <string name="ow_currency">CURRENCY</string>
    <!-- Description here -->
    <string name="ow_passphrase">PASSPHRASE</string>
    <!-- Description here -->
    <string name="ow_confirmation_fee">CONFIRMATION FEES</string>
    <!-- ello -->
    <string name="ow_hello">Hello!</string>
    <!-- welcome label -->
    <string name="ow_welcome">Welcome to ziftrWALLET!</string>
    <!-- message in passphrase welcome screen -->
    <string name="ow_welcome_passphrase_message">Please take a moment to set your passphrase below. 
        This will ensure that your coins are secure in the unfortunate event that someone steals or hacks your phone. 
        We recommend using a few words that you are sure to remember and that only you will know.\n\nOnce you\'ve set your 
        passphrase, DO NOT FORGET IT! You will not be able to spend your coins without it.</string>
    <!-- message in name welcome screen -->
    <string name="ow_welcome_name_message">Please also take a moment to provide your name below. This value is only 
        stored on your device and, if provided, persons sending you coins will not need to type your name every 
        time they transact with you. We suggest you use your first name, or the name you commonly use.</string>
    <!-- Description here -->
    <string name="ow_receive_button_text">RECEIVE</string>
    <!-- Description here -->
    <string name="ow_create_passphrase">CREATE PASSPHRASE</string>
    <!-- Description here -->
    <string name="ow_save_passphrase">SAVE PASSPHRASE</string>
    <!-- Description here -->
    <string name="ow_ask_me_later">ASK ME LATER</string>
    <!-- Description here -->
    <string name="ow_save_name">SAVE NAME</string>
    <!-- Description here -->
    <string name="ow_set_name">SET NAME</string>
        <!-- Description here -->
    <string name="ow_name_label">NAME</string>
        <!-- Description here -->
    <string name="ow_set_name_settings">Set Name</string>
        <!-- Description here -->
    <string name="ow_disable_name">Disable Name</string>
    <!-- Description here -->
    <string name="ow_create_new_address">CREATE NEW ADDRESS</string>
    <!-- Description here -->
    <string name="ow_total_label">Total</string>
    <!-- Description here -->
    <string name="ow_add_currency_description">This is your home screen where you can navigate between all of your different wallets. Click the + icon above to begin adding currencies to your ziftrWALLET.</string>
    <!-- Description here -->
    <string name="ow_about_text">ziftrWALLET streamlines the process of sending, receiving and storing different types of cryptocurrency.\n\n
        ziftrWALLET was created by the talented entrepreneurs, software developers and marketers behind Ziftr, a suite of shopping tools that has helped more than 2 million users find the best deals at their favorite online retailers.\n\n
		To learn more about Ziftr, go to www.ziftr.com.\n\n
		Coming Soon: ziftrCOIN!\n\n
		ziftrCOIN, the first digital currency developed for online shoppers, aims to revolutionize shopping by putting cryptocurrency into the hands of consumers and enabling them to conduct simple, secure transactions at their favorite online retailers.\n\n
		To learn more about ziftrCOIN, go to www.ziftrCOIN.com.</string>
	<string name="ow_security_text"><b>ZiftrWallet</b> is a decentralized mobile wallet in that addresses and keys are stored on your phone. This way your wallet is safe from server-side attacks, however it is necessary for the user to keep the phone physically secure. 
	    \n\nBe wary of allowing untrusted people or apps access to your phone. \n\nIt is recommended to store a spendable amount of cryptocurrency on ziftrWallet rather than your entire balance.
	   \n\n<b>WARNING: Remember to transfer your coins to other wallets before uninstalling.</b>
	</string>
</resources>