<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/ow_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ow_currency" />

        <RelativeLayout
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector"
            android:clickable="true" >

            <TextView
                android:id="@+id/currencyLabel"
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ow_fiat_currency" />

            <ImageView
                android:layout_width="@dimen/ow_total_icon_side_length"
                android:layout_height="@dimen/ow_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/ow_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/ow_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ow_confirmation_fee" />

        <RelativeLayout
            style="@style/settings_bar"
            android:background="@color/White" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ow_editable_confirmation_fees" />

            <CheckBox
                android:id="@+id/editable_confirmation_fees"
                android:layout_width="@dimen/ow_checkbox_size"
                android:layout_height="@dimen/ow_checkbox_size"
                android:button="@null"
                android:background="@drawable/orange_checkbox"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/ow_quarter_icon_size"
                android:paddingTop="@dimen/ow_quarter_icon_size"
                android:text="@string/ow_empty_string" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/ow_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ow_passphrase" />

        <RelativeLayout
            android:id="@+id/reset_password_button"
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector" >

            <TextView
                android:id="@+id/reset_password_text"
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ow_reset_password" />

            <ImageView
                android:layout_width="@dimen/ow_total_icon_side_length"
                android:layout_height="@dimen/ow_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/ow_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/disable_passphrase"
            style="@style/settings_bar"
            android:layout_marginTop="1dp"
            android:background="@drawable/currency_list_selector" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ow_disable_passphrase" />

            <ImageView
                android:layout_width="@dimen/ow_total_icon_side_length"
                android:layout_height="@dimen/ow_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/ow_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/ow_quarter_icon_size"
            android:background="@drawable/dropshadow" />
    </LinearLayout>

</ScrollView>