<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/custom_dialog_title" />

    <include layout="@layout/custom_dialog_message" />

    <EditText
        android:id="@+id/textbox_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/ow_new_passphrase_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/LightGray"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <Button
            android:id="@+id/left_dialog_button"
            style="@style/dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:maxLines="2"
            android:minHeight="45dp"
            android:text="@string/ow_dialog_cancel"
            android:textSize="14sp" >
        </Button>

        <Button
            android:id="@+id/right_dialog_button"
            style="@style/dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:maxLines="2"
            android:minHeight="45dp"
            android:text="@string/ow_dialog_continue"
            android:textSize="14sp" >
        </Button>
    </LinearLayout>

</LinearLayout>