<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="0dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <RelativeLayout
                    style="@style/send_receive_block_containers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ow_send_receive_list_spacing_top_margin"
                    android:orientation="vertical"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp" >

                    <ImageView
                        android:id="@+id/sendGetAddressFromHistoryIcon"
                        android:layout_width="@dimen/ow_total_icon_side_length"
                        android:layout_height="@dimen/ow_total_icon_side_length"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:contentDescription="@string/ow_old_passphrase_hint"
                        android:padding="@dimen/ow_borderless_icon_margin"
                        android:src="@drawable/from_history" />

                    <ImageView
                        android:id="@+id/send_qr_icon"
                        android:layout_width="@dimen/ow_total_icon_side_length"
                        android:layout_height="@dimen/ow_total_icon_side_length"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:contentDescription="@string/ow_old_passphrase_hint"
                        android:padding="@dimen/ow_bordered_icon_margin"
                        android:src="@drawable/qrcode_enabled" />

                    <TextView
                        android:id="@+id/sendToAddressTitleView"
                        style="@style/send_receive_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/send_qr_icon"
                        android:layout_gravity="center"
                        android:layout_toLeftOf="@id/send_qr_icon"
                        android:layout_toRightOf="@id/sendGetAddressFromHistoryIcon"
                        android:gravity="left"
                        android:text="@string/ow_send_to_address" >
                    </TextView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ow_edit_text_height"
                        android:layout_below="@id/sendToAddressTitleView"
                        android:layout_toLeftOf="@id/send_qr_icon"
                        android:layout_toRightOf="@id/sendGetAddressFromHistoryIcon"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/send_paste_icon"
                            android:layout_width="@dimen/ow_total_icon_side_length"
                            android:layout_height="@dimen/ow_total_icon_side_length"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_gravity="center"
                            android:background="@color/White"
                            android:clickable="true"
                            android:contentDescription="@string/ow_old_passphrase_hint"
                            android:padding="@dimen/ow_bordered_icon_margin"
                            android:src="@drawable/copy_icon_clickable" />

                        <EditText
                            android:id="@+id/sendEditTextReceiverAddress"
                            style="@style/send_receive_edit_text"
                            android:layout_width="match_parent"
                            android:layout_alignTop="@id/send_paste_icon"
                            android:layout_toLeftOf="@id/send_paste_icon"
                            android:inputType="text" >
                        </EditText>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/send_receive_block_containers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ow_send_receive_list_spacing_top_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/sendToNameTitle"
                        style="@style/send_receive_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:text="@string/ow_send_to_address_name" >
                    </TextView>

                    <EditText
                        android:id="@+id/send_edit_text_reciever_name"
                        style="@style/send_receive_edit_text"
                        android:layout_width="match_parent"
                        android:layout_below="@id/sendToNameTitle"
                        android:inputType="text" >
                    </EditText>
                </RelativeLayout>

                <LinearLayout
                    style="@style/send_receive_block_containers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ow_send_receive_list_spacing_top_margin"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/ow_send_receive_list_background"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/send_receive_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:text="@string/ow_send_amount" >
                        </TextView>

                        <EditText
                            android:id="@+id/sendEditTextAmount"
                            style="@style/send_receive_edit_text"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal" >
                        </EditText>
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1" >
                    </View>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/ow_send_receive_list_background"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/send_receive_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:text="@string/ow_send_amount_equivalent" >
                        </TextView>

                        <EditText
                            android:id="@+id/sendEditTextAmountFiatEquiv"
                            style="@style/send_receive_edit_text"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal" >
                        </EditText>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/send_receive_block_containers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ow_send_receive_list_spacing_top_margin"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/send_receive_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:text="@string/ow_send_transaction_fee" >
                        </TextView>

                        <EditText
                            android:id="@+id/sendEditTextTransactionFee"
                            style="@style/send_receive_edit_text"
                            android:layout_width="match_parent"
                            android:inputType="numberDecimal" >

                            <!--
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                            -->
                        </EditText>
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1" >
                    </View>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/send_receive_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="left"
                            android:text="@string/ow_send_amount_equivalent" >
                        </TextView>

                        <EditText
                            android:id="@+id/sendEditTextTransactionFeeFiatEquiv"
                            style="@style/send_receive_edit_text"
                            android:layout_width="match_parent"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="text" >
                        </EditText>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    style="@style/send_receive_block_containers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ow_send_receive_list_spacing_top_margin"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/sendTotalTitleTextView"
                        style="@style/send_receive_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:text="@string/ow_send_total" >
                    </TextView>

                    <TextView
                        android:id="@+id/sendTotalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/sendTotalTitleTextView"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:text="@string/ow_send_default_total"
                        android:textColor="@color/White"
                        android:textSize="40sp" >
                    </TextView>

                    <TextView
                        android:id="@+id/sendTotalFiatEquivTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/sendTotalTextView"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@id/sendTotalTextView"
                        android:gravity="bottom"
                        android:text="@string/ow_send_default_total_fiat_equiv"
                        android:textColor="@color/White" >
                    </TextView>

                    <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="0dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:padding="0dp" >
                </LinearLayout>
                    -->
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        layout="@layout/_dual_button_footer"
        android:padding="0dp" />

</LinearLayout>